Bugfix overlap with other elements

--- a/src/features/sidebar/sidebar.module.scss
+++ b/src/features/sidebar/sidebar.module.scss
@@ -14,7 +14,7 @@
 
   @include abs.breakpoints(sm) {
     position: fixed;
-    z-index: 10;
+    z-index: 30;
   }
 
   .sidebar__content {
